# AppflameTeastTasks

./: .gitignore  Design a system that classifies user-generated text.drawio  NSFW_Content_Moderation.md  README.md  Task_2.md  main.py  pyproject.toml  train_simple_ML_model.md
settings/: loggining.py
train_ml_model/: __init__.py  data_preparation.py  model_ml.py  nltk_data.py
train_ml_model/settings/: __init__.py
