[tool.poetry]
name = "appflameteasttasks"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
nltk = "^3.9.1"
pandas = "^2.3.0"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
